<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Sign_Up_activity">

    <LinearLayout
        android:id="@+id/choice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/Category_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:gravity="center">


                    <RadioButton
                        android:id="@+id/Customer"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:background="@drawable/custom_radio"
                        android:button="@android:color/transparent" />

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="-10dp"
                        android:src="@drawable/customer_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/customer"
                        android:textColor="@color/text_theme"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:layout_marginStart="25dp"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/Driver"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:background="@drawable/custom_radio"
                        android:button="@android:color/transparent" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/driver_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/driver"
                        android:textColor="@color/text_theme"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </RelativeLayout>

            </LinearLayout>
        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choice_layout"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/or_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choice_layout"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Login as"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/other_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/admin_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/choice_layout"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:padding="4dp"
            android:text="Admin"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/other_option"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? "
            android:textColor="@color/dim_black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Login"
            android:textColor="@color/blue_default"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="294dp"
        android:layout_height="266dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="52dp"
        app:srcCompat="@drawable/deliveryou_full_logo" />


</RelativeLayout>