<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Signup_Driver1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/bubbleboddyneue"
            android:layout_margin="5dp"
            android:text="Add Your Information"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/blue_default"
                app:cardCornerRadius="70dp">

                <ImageView
                    android:id="@+id/profiledp_driver"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_camera_alt_24" />

            </androidx.cardview.widget.CardView>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">




                <EditText
                    android:id="@+id/name_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/custom_edittext"
                    android:ems="10"
                    android:hint="Enter your name/username"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="15dp"
                    android:text="Username"
                    android:textColor="@color/blue_default"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">




                <EditText
                    android:id="@+id/phone_number_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/custom_edittext"
                    android:ems="10"
                    android:hint="Enter phone number"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="15dp"
                    android:text="Number"
                    android:textColor="@color/blue_default"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">




                <EditText
                    android:id="@+id/dob_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/custom_edittext"
                    android:ems="10"
                    android:hint="@string/enter_your_date_of_birth"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="15dp"
                    android:text="Date of Birth"
                    android:textColor="@color/blue_default"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">




                <EditText
                    android:id="@+id/password_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_edittext"
                    android:ems="10"
                    android:hint="Enter password"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="15dp"
                    android:text="Password"
                    android:textColor="@color/blue_default"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">



                <EditText
                    android:id="@+id/cnfrmPass_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/custom_edittext"
                    android:ems="10"
                    android:hint="Confirm password"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="15dp"
                    android:text="Confirm Password"
                    android:textColor="@color/blue_default"/>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25dp"
                android:textStyle="bold"
                android:text="Select your Gender: "
                android:textColor="@color/black"
                android:textSize="20sp" />


            <RadioGroup
                android:id="@+id/gender_selection_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:gravity="center">



                        <RadioButton
                            android:id="@+id/Male_driver"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="@drawable/custom_radio"
                            android:button="@android:color/transparent"
                            />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/male_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4dp"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textColor="@color/text_theme"
                            tools:ignore="SmallSp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_marginStart="50dp"

                        android:gravity="center">



                        <RadioButton
                            android:id="@+id/Female_driver"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="@drawable/custom_radio"
                            android:button="@android:color/transparent"
                            />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/female_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="4dp"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textColor="@color/text_theme"
                            tools:ignore="SmallSp" />

                    </RelativeLayout>

                </LinearLayout>
            </RadioGroup>





        </LinearLayout>



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Sign_up_data_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:hint="Signup"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColorHint="@color/white"
        android:textSize="25dp" />


</RelativeLayout>